Fix overflow-x

--- a/src/css/all.css
+++ b/src/css/all.css
@@ -105,6 +105,7 @@ html {
   min-height: 100vh;
   padding-bottom: 70px;
   font-size: 18px;
+  overflow-x: hidden;
 }
 
 body {
